# yt-dl-ocr

./: .env.SAMPLE  .gitignore  NOTES.md  README.md  demo.py  pyproject.toml
yt_dl_ocr/: __init__.py  ytdlocr.py
